<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hour Tracker</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="wage">Wage</string>
    <string name="totHours">Total Hours</string>
    <string name="totOwed">Total Owed</string>
    <string name="hours">Hours:\n</string>
    <string name="dates">Dates:\n</string>
    <string name="startHours">Start Hours:\n</string>
    <string name="stopHours">Stop Hours:\n</string>
    <string name="back">Back</string>
    <string name="clearAll">CLEAR ALL</string>
    <string name="amountPaid">Amount Paid</string>
    <string name="leftover">Leftover Hours</string>
</resources>
